# AudioDevOrga

./: .gitignore  1_DerStartMitJUCE.md  1_DerStartMitJUCE_Gain1.md  2_ASimpleGain.md  2_GainParameter_der_JUCE_Weg.md  3_Gain_Glaettung.md  4_Gain_Kapselung.md  BasicTipsAndTricks.md  CMakeLists.txt  DSP_the_basics.md  DerStartMitJUCE.md  HowToAddConsoleTester.md  HowToBuildANewPlugIn.md  HowToUseLibraries(in_this_fraework).md  HowTos.md  LICENSE  README.md  ToDo.md  installReadMe.md
Installation/: ReadMe.txt
InstallationOfNewPlugInsHelper/: ReadMe.md
MatlabHelper/: ReadMe.md  genTestSignals.m  genTestSignals.m~
PlgInPics/: ReadMe.md
PythonHelper/: ReadMe.md
